<resources>
    <string name="app_name">Amiternum</string>
    <string name="app_subtitle">La nostra storia</string>
    <string name="app_subtitle2">con gli occhi del futuro</string>
    <string name="app_subtitle3">Powered by</string>
    <string name="icon">icona</string>
    <string name="app_test">APP TEST</string>
    <string name="start">Start</string>
    <string name="punti">Punti</string>
    <string name="luoghi_inseriti">Luoghi inseriti</string>
    <string name="fotocamera">Fotocamera</string>
    <string name="indoor">Indoor</string>
    <string name="home">Home</string>
    <string name="outdoor">Outdoor</string>
    <string name="ar">AR</string>
    <string name="refresh">Refresh</string>
    <string name="tracking">Tracking…</string>
    <string name="title">Museo Munda e Sito Amiternum</string>
    <string name="subtitle">Riscopri la storia</string>
    <string name="outdoorButton">Visita il sito archeologico Amiternum</string>
    <string name="descriptionText">Descrizione </string>
    <string name="latitudeText">Latitudine: </string>
    <string name="longitudeText">Longitudine: </string>
    <string name="altitudeText">Altitudine: </string>
    <string name="altitudeMeasuring">m slm</string>
    <string name="distanceText1">Sei distante </string>
    <string name="distanceText2"> m dal punto più vicino: </string>
    <string name="audioResourceText">Risorsa Audio</string>
    <string name="playerZero">00:00</string>
    <string name="videoResourceText">Risorsa Video</string>
    <string name="arResourceText">Vedi oggetto in ar</string>
    <string name="titleSettingAlert">Oh oh, il GPS non è attivato!</string>
    <string name="messageSettingAlert">Il GPS non è attivo. Vuoi andare nelle impostazioni di sistema?</string>
    <string name="okSettingAlert">Vai alle impostazioni</string>
    <string name="cancelSettingAlert">Rifiuta</string>
    <string name="dimissSettingAlert">Non mi importa</string>
    <string name="enableGPSRequest">Il GPS è disattivato, attivalo per continuare</string>
    <string name="authRequestText">Autorizzazione necessaria</string>
    <string name="errorModelLoad">Non riesco a caricare il modello</string>
    <string name="scanMuseumQR">Scansiona un QR del museo</string>
    <string name="scan">Scansiona QR code</string>
    <string name="myPosition">Sono qui!</string>
    <string name="waitingText">Ricevo l\'oggetto dalla galassia vicina</string>
    <string name="impatientText">La galassia vicina è andata distrutta</string>
    <string name="tapScreen">Attendi che compaiano i puntini poi cliccaci sopra</string>
    <string name="scanText">Scansiona un qr code del museo per continuare</string>
</resources>